# daisyhelps

./: .env.example  .gitignore  CLAUDE.md  NavigEase_Requirements_Document.docx  PHASE-6-COMPLETION-2026-05-16.md  README.md  TODO.md  pyproject.toml  render.yaml  requirements.txt  screenshot_outline.md
.github/workflows/: desktop-ci.yml  release.yml
backend/: config.py  logging_setup.py  main.py  messages.py  prompts.py  readiness.py  session.py
backend/pipeline/: llm.py  locator.py  stt.py  tts.py  vad.py
desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json  tsconfig.renderer.json
desktop/src/: main.ts  preload.ts  screen-picker.html
desktop/src/renderer/: app.ts  audio-utils.ts  daisy-mark.jsx  index.html  indicator.css  indicator.html  indicator.ts  main.jsx  overlay.css  overlay.html  overlay.ts  screens.jsx  styles.css  subtitle.css  subtitle.html  subtitle.ts  types.ts
desktop/tests/: audio-utils.test.mjs
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  DEMO.md  POINTER-OVERLAY-PROMPT.md  RUNBOOK.md
docs/superpowers/: HANDOFF.md
docs/superpowers/plans/: 2026-05-16-click-indicator.md  2026-05-16-daisy-helps-backend.md  2026-05-16-daisy-helps-desktop.md  2026-05-17-overlay-subtitles.md  2026-05-17-screen-guide-flow.md
landing/: _redirects  index.html  robots.txt  sitemap.xml  styles.css
test_harness/: test_client.py  test_page.html
tests/: conftest.py  test_indicator_flow.py  test_indicator_messages.py  test_llm_router.py  test_locator.py  test_readiness_indicator.py  test_session.py  test_vad.py  test_ws_messages.py
(+5 files in other folders)
